--- a/YumFun/YumFun/Views/Cooking.storyboard
+++ b/YumFun/YumFun/Views/Cooking.storyboard
@@ -95,22 +95,22 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCf-kD-GTr">
-                                                    <rect key="frame" x="20" y="20" width="354" height="27"/>
+                                                    <rect key="frame" x="20" y="20" width="354" height="22"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not assigned yet." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="889-yj-iGF">
-                                                    <rect key="frame" x="20" y="55" width="133" height="21"/>
+                                                    <rect key="frame" x="20" y="50" width="133" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" systemColor="secondaryLabelColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="eUj-Sz-hDw">
-                                                    <rect key="frame" x="20" y="55" width="354" height="40"/>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <rect key="frame" x="20" y="50" width="354" height="45"/>
+                                                    <color key="backgroundColor" red="0.8678738949" green="1" blue="0.66432964459999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="40" id="9P4-ao-2QU"/>
+                                                        <constraint firstAttribute="height" constant="45" id="9P4-ao-2QU"/>
                                                     </constraints>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qmV-Kx-VuB">
                                                         <size key="itemSize" width="41" height="42"/>
@@ -120,7 +120,7 @@
                                                     </collectionViewFlowLayout>
                                                     <cells>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StepAvatarCell" id="A54-ta-XWu" customClass="AvatarCell" customModule="YumFun" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="-1" width="41" height="42"/>
+                                                            <rect key="frame" x="0.0" y="1.5" width="41" height="42"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="j1q-QA-dP1">
                                                                 <rect key="frame" x="0.0" y="0.0" width="41" height="42"/>
@@ -128,6 +128,10 @@
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fGN-iR-n08" customClass="CircularImageView" customModule="YumFun" customModuleProvider="target">
                                                                         <rect key="frame" x="0.0" y="0.0" width="41" height="42"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="42" id="ucv-dL-fKE"/>
+                                                                            <constraint firstAttribute="width" constant="42" id="vE7-DS-Fjy"/>
+                                                                        </constraints>
                                                                     </imageView>
                                                                 </subviews>
                                                                 <constraints>
@@ -191,6 +195,7 @@
                     </view>
                     <connections>
                         <outlet property="avatarCollectionView" destination="Ggd-SL-NJW" id="RhU-93-dBE"/>
+                        <outlet property="inviteButton" destination="OLh-Ak-S9h" id="c2j-CF-byb"/>
                         <outlet property="stepCollectionView" destination="kTl-G3-BGO" id="hvG-ob-OKL"/>
                     </connections>
                 </viewController>
